[package]
name = "iobuf"
version = "0.1.0"
edition = "2024"

[dependencies]
bytes = { version = "1.9.0", features = ["serde"] }
cxx = "1.0"
fbthrift = { version = "0.0.1+unstable", git = "https://github.com/facebook/fbthrift.git", branch = "main" }
iobuf_sys = { version = "0.1.0", path = "../iobuf_sys" }
memmap2 = "0.9"
sapling-minibytes = { git = "https://github.com/facebook/sapling.git", branch = "main", features = [
    "frombytes",
] }

[build-dependencies]
# bindgen = "0.72"
cxx-build = "1.0"
pkg-config = "0.3"
