[package]
name = "iobuf_sys"
version = "0.1.0"
edition = "2024"

[lib]

[dependencies]
# bytes = { version = "1.9.0", features = ["serde"] }
# cxx = "1.0"
# fbthrift = { version = "0.0.1+unstable", git = "https://github.com/facebook/fbthrift.git", branch = "main" }

[build-dependencies]
bindgen = "0.72"
# cxx-build = "1.0"
pkg-config = "0.3"
